# CppUnitTestFramework

./: CMakeLists.txt  CppUnitTestFramework.hpp  LICENSE  README.md
CppUnitTestFrameworkTestAdapter/: .gitignore  CppUnitTestFrameworkTestAdapter.sln  NuGet.config
CppUnitTestFrameworkTestAdapter/CppUnitTestFrameworkTestAdapter/: CppUnitTestFrameworkTestAdapter.csproj  ReleaseNotes.md  packages.config  source.extension.vsixmanifest
CppUnitTestFrameworkTestAdapter/CppUnitTestFrameworkTestAdapter/CppUnitTestFramework/: Configuration.cs  TestAdapterBase.cs  TestDiscoverer.cs  TestExecutor.cs
CppUnitTestFrameworkTestAdapter/CppUnitTestFrameworkTestAdapter/Properties/: AssemblyInfo.cs
Tests/: AssertTest.cpp  CMakeLists.txt  SectionTest.cpp  TestCaseTest.cpp  ToStringTest.cpp
vscode-cpputf-test-adapter/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-cpputf-test-adapter/src/: main.ts
vscode-cpputf-test-adapter/src/CppUnitTestFramework/: Adapter.ts  AsyncExec.ts  Configuration.ts  DisposableBase.ts  DisposableSet.ts  Logger.ts
